--- a/presentation/src/main/res/layout/product_fragment.xml
+++ b/presentation/src/main/res/layout/product_fragment.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvNews"
+        android:id="@+id/rvProducts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
