--- a/presentation/src/main/res/layout/product_detail_fragment.xml
+++ b/presentation/src/main/res/layout/product_detail_fragment.xml
@@ -108,7 +108,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
-                        android:text="AMOUNT: "
+                        android:text="TOTAL: "
                         android:textSize="12dp"
                         android:textStyle="bold"
                         android:textColor="@android:color/black"/>
@@ -128,8 +128,10 @@
             </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginTop="10dp"
                 android:id="@+id/rvTransactions"
                 android:layout_width="match_parent"
+                tools:listitem="@layout/transaction_item"
                 android:layout_height="wrap_content">
 
             </androidx.recyclerview.widget.RecyclerView>
