--- a/presentation/src/main/res/layout/transaction_item.xml
+++ b/presentation/src/main/res/layout/transaction_item.xml
@@ -2,26 +2,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="5sp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/transactionAmount"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5sp"
-        android:gravity="center|start"
-        android:textColor="@android:color/black"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/transactionCurrency"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5sp"
-        android:gravity="center|start"
-        android:textColor="@android:color/black"
-        android:textSize="11sp" />
+        <LinearLayout
+            android:id="@+id/ly_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="AMOUNT: "
+            android:layout_gravity="center"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"/>
+
+        <TextView
+            android:id="@+id/transactionAmount"
+            android:layout_width="wrap_content"
+            tools:text="200000"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+
+            android:textStyle="bold"
+            android:textColor="@color/amount_green"
+            android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="20dp"
+            android:layout_alignParentEnd="true"
+           android:layout_toEndOf="@id/ly_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity=""
+            android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:layout_marginRight="5dp"
+            android:text="Currency: "
+            android:textSize="15dp"
+            android:textColor="@android:color/black"/>
+
+        <TextView
+            android:id="@+id/transactionCurrency"
+            android:layout_width="wrap_content"
+            tools:text="EUR"
+            android:textSize="15sp"
+            android:layout_gravity="center"
+            android:textStyle="bold|italic"
+            android:textColor="@color/blue_product"
+            android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+
 
 </LinearLayout>
