View of product finished

--- a/presentation/src/main/res/layout/product_fragment.xml
+++ b/presentation/src/main/res/layout/product_fragment.xml
@@ -4,11 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_dark"
+    android:orientation="vertical"
+    android:background="@android:color/white"
     tools:context=".MainActivity">
+
+    <ImageView
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/gnb_logo"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_red_dark"
+        android:gravity="center_horizontal"
+        android:text="GOLIATH NATIONAL BANK"
+        android:fontFamily="monospace"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProducts"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
