--- a/presentation/src/main/res/layout/product_item.xml
+++ b/presentation/src/main/res/layout/product_item.xml
@@ -1,27 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="5sp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/productName"
-        android:gravity="center|start"
-        android:textSize="25sp"
-        android:layout_margin="5sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/productAmount"
-        android:layout_width="match_parent"
-        android:gravity="center|start"
-        android:textSize="11sp"
-        android:layout_margin="5sp"
-        android:textColor="@android:color/black"
-        android:layout_height="wrap_content" />
+        <RelativeLayout
+            android:layout_toEndOf="@+id/image_bank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/ly_product_name"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:text="SKU ID: "
+                    android:textSize="17dp"
+                    android:textStyle="bold"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/tv_product_name"
+                    android:layout_width="wrap_content"
+                    tools:text="1750"
+                    android:textSize="17sp"
+                    android:textStyle="bold|italic"
+                    android:textColor="@color/blue_product"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_below="@id/ly_product_name"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:text="Currency: "
+                    android:textSize="15dp"
+                    android:textColor="@android:color/black"/>
+
+                <TextView
+                    android:id="@+id/tv_product_currency"
+                    android:layout_width="wrap_content"
+                    tools:text="EUR"
+                    android:textSize="15sp"
+                    android:textStyle="bold|italic"
+                    android:textColor="@color/blue_product"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_alignParentEnd="true"
+            android:gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="TOTAL: "
+                android:textSize="12dp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"/>
+
+            <TextView
+                android:id="@+id/tv_product_amount"
+                android:layout_width="wrap_content"
+                tools:text="200000"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/amount_green"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
 </LinearLayout>
